# installer

./: .gitignore  CHANGES.md  README.md  build.sh  mkdocs.yml  pp.html  pp.py  pp2.html  pp2.py  pp3.html  publish.sh  pyproject.toml  setup.sh  testing000.DSK
.devcontainer/: devcontainer.json
.versions/: 0.0.1.md
cfg/: Makefile.j2  emulators.cfg.j2  (+2 more)
tools/sdk/: .gitignore  Pipfile  pee.txt  pyproject.toml  requirements.txt  setup.py
tools/sdk/CPCReady/: common.py  func_build.py  func_info.py  func_palette.py  func_project.py  func_run.py  func_screen.py  func_sprite.py  func_update.py  main.py
tools/sdk/CPCReady/binary/: 2cdt  xfer
tools/sdk/CPCReady/z88dk/lib/clibs/: 464_math.lib  6128_math.lib  664_math.lib  8080_clib.lib  8080_crt0.lib  abc80_clib.lib  ace_clib.lib  adam.lib  agon_clib.lib  alphatro_clib.lib  aquarius_clib.lib  aussie.lib  bee_clib.lib  bondwell2.lib  c128ansi_clib.lib  coleco_clib.lib  cpcfs.lib  cpm_clib.lib  cpmixiy_clib.lib  embedded_clib.lib  enterprise_clib.lib  ez80_z80_crt0.lib  farz88.lib  fastmath_ez80_z80.lib  fastmath_z180.lib  fastmath_z80n.lib  flosdos.lib  g800_clib.lib  g850_clib.lib  g850b.lib  gfx128hr.lib  gfx128udg.lib  gfx81arx192.lib  gfx81arx64.lib  gfx81g007.lib  gfx81hr192.lib  gfx81hr64.lib  gfx81mt64.lib  gfx81phrg.lib  gfx81udg.lib  (+85 more)
tools/sdk/test/: test_0.py  test_1.py
tools/sdk/test/data/project/cfg/: WEB6128.html  emulators.cfg  images.cfg  project.cfg
tools/sdk/test/data/project/src/: MAIN.BAS  MAIN.UGB
tools/sdk/test/data/project/temp/: AVATAR.ASM  AVATAR.C  AVATAR.DSK  AVATAR.PAL  AVATAR.SCR
(+290 files in other folders)
