[tool.poetry]
name = "CPCReady"
version = "0.0.1"
description = "SDK for programing in basic and Basic compile ugbasic"
authors = ["david chivato de la fuente <destroyer.dcf@gmail.com>"]
readme = "README.md"

packages = [
    { include = "CPCReady" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.1.7,<8.2.0"
rich = ">=13.6.0,<13.7.0"
jinja2 = ">=3.1.2,<3.2.0"
requests = ">=2.31.0,<2.32.0"
packaging = ">=23.2,<24.0"
inquirer = ">=3.1.3,<3.2.0"
setuptools = ">=68.2.2,<68.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
